Fix wrapping of 3 hero links

--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -115,6 +115,7 @@
     @extend %grid-3;
     width: 100%;
     margin-top: 2em;
+    flex-wrap: wrap;
 
     @include respond-to(expand-hero) {
       margin: 0;
